# myPhysicsEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  run.sh
include/: my.h
include/gl/: glut.h
include/math/: base.h  base.hpp  precision.h  precision.hpp  random.h  random.hpp
include/module/: app.h  timing.h
include/structre/: body.hpp  particle.h  particle.hpp  particle_force.h  particle_force.hpp  particle_links.hpp  particle_spring.hpp  particle_world.hpp  pcontacts.hpp
src/: app.cpp  main.cpp  timing.cpp
src/demos/: ballistic.cpp  blob.cpp  fireworks.cpp
test/: test.cpp
